Parameters for authentication page, random states

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@
   padding: 2rem;
 
 }
+
+.imageProcess {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: auto;
+  margin-top: 650px;
+  gap: 10px; 
+}
+
+
+
