--- a/src/components/Liveness.css
+++ b/src/components/Liveness.css
@@ -1,3 +1,13 @@
+.webCam{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .pageDiv{
  position: fixed;
   bottom: 450px;       
@@ -5,34 +15,7 @@
   display: flex;
   align-items: flex-end; 
   justify-content: flex-end;
-}
-
-.pageButton{
-    padding: 12px 30px;
-    background-color: white;
-    border: 2px solid black !important; 
-    color: black;
-    cursor: pointer;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.selectButton {
-    padding: 12px 30px;
-    background-color: white;
-    border: 2px solid black !important; 
-    color: black;
-    cursor: pointer;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
+}  
   .selectButton:hover {
     background-color: #b2b3b2; 
   }
@@ -80,7 +63,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(201, 201, 201, 0.7); /* Fondo oscuro */
+    background: rgba(201, 201, 201, 0.7); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,3 +85,48 @@
   .error {
     color: red;
   }
+
+ 
+.file-upload-container {
+  display: flex;
+  align-items: center;
+  flex: auto;
+  justify-content: center;
+}
+
+
+/* Estilos al pasar el ratón */
+.custom-file-upload:hover {
+  background-color: #b2b3b2;
+}
+
+/* Icono dentro del botón */
+.icon-upload {
+  margin-right: 8px; 
+  font-size: 20px;   
+}
+
+
+button-container {
+  display: flex;
+  justify-content: flex-start; /* Alinea los botones hacia la izquierda */
+  gap: 10px;
+  margin-top: 20px; /* Espacio por encima */
+}
+
+/* Estilo del botón individual */
+.custom-file-upload, .selectButton, .pageButton {
+  padding: 12px 30px;
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  cursor: pointer;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.custom-file-upload:hover, .selectButton:hover, .pageButton:hover {
+  background-color: #b2b3b2;
+}
