--- a/src/components/Webcam.css
+++ b/src/components/Webcam.css
@@ -1,11 +1,21 @@
-.tomarFotoBtn{
+.tomarFotoBtn {
     background-color: white;
-    border: 2px solid black !important; 
+    border: 2px solid black; /* Color del borde */
     color: black;
     cursor: pointer;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 20px;  
+    padding: 2px;  
+    width: 40px;   
+    height: 40px;  
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px; /* Borde redondeado */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.tomarFotoBtn:hover {
+    transform: scale(1.1);
+    background-color: #f1f1f1; 
 }
