--- a/src/components/Plate.css
+++ b/src/components/Plate.css
@@ -125,3 +125,95 @@
   width: 100%;
   height: auto;
 }
+/* Modal de la tabla */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.864);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-height: 80%;
+  overflow-y: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.close-btn {
+  margin-top: 40px;
+  margin-right: 40px;
+  background-color: rgb(253, 253, 253);
+  color: black;
+  padding: 0px 10px;
+  border: none;
+  border-radius: 50%;
+  font-size: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  background-color: rgb(179, 175, 175);
+}
+
+/* Estilos para la tabla dentro del modal */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+thead {
+  background-color: #f2f2f2;
+}
+
+th, td {
+  padding: 12px 20px;
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+th {
+  font-weight: bold;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+/* Botón de abrir el modal */
+.ver {
+  padding: 12px 30px;
+  background-color: #fff;
+  color: #333;
+  border: 2px solid #333;
+  border-radius: 30px; /* Borde más redondeado */
+  font-weight: bold;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.ver:hover {
+  background-color: #cbadb0;
+
+}
